--- a/app.json
+++ b/app.json
@@ -63,8 +63,7 @@
     },
     "formation": {
         "web": {
-            "quantity": 1,
-            "size": "free"
+            "quantity": 1
         }
     },
     "image": "heroku/php"
